<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="io.github.hopedia.LoginActivity">

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/messages">
		<TextView
			android:visibility="gone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/textColorPrimaryInverse"
			android:text="@string/loginFailed"
			android:id="@+id/login_failed"
			android:layout_alignParentStart="true"
			android:background="?attr/error"
			android:padding="6dp"/>
		<TextView
			android:visibility="gone"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/textColorPrimaryInverse"
			android:text="@string/signup_success"
			android:id="@+id/signup_success"
			android:layout_alignParentStart="true"
			android:background="?attr/colorPrimary"
			android:padding="6dp"/>
	</FrameLayout>
	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/field_login"
		android:layout_below="@id/messages">

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/email"
				android:layout_column="0"/>

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:ems="10"
				android:id="@+id/email"
				android:layout_column="1"/>
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/password"
				android:layout_column="0"/>

			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:inputType="textPassword"
				android:ems="10"
				android:id="@+id/password"
				android:layout_column="1"/>
		</TableRow>

	</TableLayout>

	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:id="@+id/login"
		android:layout_below="@+id/field_login"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"/>
	<Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/sign_up"
		android:id="@+id/signup"
		android:visibility="gone"
		android:layout_below="@+id/field_login"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/dont_have_an_account_sign_up"
		android:clickable="true"
		android:id="@+id/begin_signup"
		android:layout_below="@+id/login"
		android:layout_centerHorizontal="true"/>




</RelativeLayout>
